# phx-claude-siat

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  renovate.json
.claude-plugin/: marketplace.json  plugin.json
.githooks/: pre-commit
docs/adr/: 001-co-locate-marketplace-and-plugin.md  002-generate-changelog-at-release.md  INDEX.md
docs/superpowers/specs/: 2026-06-29-adr-reference-linking-design.md
hooks/: hooks.json
scripts/adr/: generate_index.py
skills/accessibility-review/: SKILL.md
skills/creative-commits/: .gitignore  SKILL.md  pyproject.toml  seed.py
skills/creative-commits/tests/: test_seed.py
skills/domain-breakdown/: SKILL.md
skills/writing-adrs/: SKILL.md
skills/writing-plans/: SKILL.md
skills/writing-release-notes/: SKILL.md
